--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -15,16 +15,8 @@
                 <input type="text" name="nome" />
             </div>
             <div>
-                <label>idade</label>
-                <input type="number" name="idade" />
-            </div>
-            <div>
-                <label>ativo</label>
-                <input type="radio" name="ativo" value="1"/>
-            </div>
-            <div>
-                <label>nao ativo</label>
-                <input type="radio" name="ativo" value="0"/>
+                <label>senha</label>
+                <input type="password" name="senha" />
             </div>
             <div>
                 <input type="submit" value="enviar">
