--- a/src/templates/modules/footer.html
+++ b/src/templates/modules/footer.html
@@ -1,3 +1,6 @@
-<footer style="border: 1px solid black;">
-    este é um footer
+<footer>
+    <p id="txt6">
+        <i class="material-icons tiny"> (c) </i>
+        copyright 2019 BBbootstrap - All right reserved
+    </p> 
 </footer>
